--- a/SignalRSample/appsettings.json
+++ b/SignalRSample/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SignalRSample-13f77d93-8050-4c6c-9472-24cadd16d6c7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=SignalRSample;Trusted_Connection=True;encrypt=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
